@@ -6,6 +6,7 @@ ver 0.19.18 (not yet released)
   - sidplay: detect libsidplay2 with pkg-config
   - sidplay: log detailed error message
   - sidplay: read the "date" tag
+  - sidplay: allow building with libsidplayfp instead of libsidplay2
 * output
   - shout: recognize setting "encoder" instead of "encoding"
 * require gcc 4.7 or newer
